--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Hiragino Kaku Gothic ProN", "Yu Gothic", sans-serif;
-            background: linear-gradient(135deg, #1a1a2e 0%, #0f0f1e 100%);
+            background: #0a0a0a;
             color: #e0e0e0;
             min-height: 100vh;
             line-height: 1.8;
@@ -40,10 +40,7 @@
         .logo {
             font-size: 24px;
             font-weight: 600;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: #ffffff;
             text-decoration: none;
         }
 
@@ -70,11 +67,10 @@
         }
 
         .document {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
+            background: #1a1a1a;
             border-radius: 20px;
             padding: 48px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border: 1px solid #333;
         }
 
         h1 {
@@ -254,7 +250,7 @@
             <ul>
                 <li><strong>OpenAI API</strong>: お客様が独自のAPIキーを使用する場合、OpenAIのプライバシーポリシーが適用されます</li>
                 <li><strong>Microsoft Store</strong>: ライセンス検証のため、Microsoft Storeと通信しますが、個人情報は送信しません</li>
-                <li><strong>GitHub Releases</strong>: アップデート確認のみ（ダウンロード統計に含まれる可能性があります）</li>
+                <li><strong>自動アップデート</strong>: アップデート確認のみ（個人情報は送信されません）</li>
             </ul>
 
             <h2>7. データセキュリティ</h2>
@@ -276,7 +272,7 @@
             <p>本アプリは13歳未満のお子様を対象としていません。13歳未満のお子様から意図的に個人情報を収集することはありません。</p>
 
             <h2>9. プライバシーポリシーの変更</h2>
-            <p>本ポリシーを変更する場合は、アプリ内での通知またはGitHubリポジトリでお知らせします。重要な変更の場合は、変更前に通知期間を設けます。</p>
+            <p>本ポリシーを変更する場合は、アプリ内での通知でお知らせします。重要な変更の場合は、変更前に通知期間を設けます。</p>
 
             <h2>10. データの削除</h2>
 
@@ -317,11 +313,7 @@
             </ul>
 
             <h2>16. お問い合わせ</h2>
-            <p>プライバシーに関するご質問は以下までお問い合わせください：</p>
-            <ul>
-                <li>GitHub Issues: <a href="https://github.com/RyotaOzawa0/eternal-audio/issues" style="color: #6366f1;">https://github.com/RyotaOzawa0/eternal-audio/issues</a></li>
-                <li>Microsoft Store レビュー機能</li>
-            </ul>
+            <p>プライバシーに関するご質問やサポートが必要な場合は、Microsoft Storeアプリページのレビュー機能をご利用ください。</p>
 
             <h2>17. 同意</h2>
             <p>本アプリを使用することにより、本プライバシーポリシーに同意したものとみなされます。</p>
