--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Hiragino Kaku Gothic ProN", "Yu Gothic", sans-serif;
-            background: linear-gradient(135deg, #1a1a2e 0%, #0f0f1e 100%);
+            background: #0a0a0a;
             color: #e0e0e0;
             min-height: 100vh;
             line-height: 1.8;
@@ -40,10 +40,7 @@
         .logo {
             font-size: 24px;
             font-weight: 600;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: #ffffff;
             text-decoration: none;
         }
 
@@ -70,11 +67,10 @@
         }
 
         .document {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
+            background: #1a1a1a;
             border-radius: 20px;
             padding: 48px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border: 1px solid #333;
         }
 
         h1 {
@@ -127,8 +123,8 @@
         }
 
         .info-box {
-            background: rgba(99, 102, 241, 0.1);
-            border-left: 4px solid #6366f1;
+            background: rgba(255, 255, 255, 0.05);
+            border-left: 4px solid #666;
             padding: 16px;
             margin: 24px 0;
             border-radius: 8px;
@@ -169,7 +165,6 @@
             <nav class="nav-links">
                 <a href="./privacy-policy.html">プライバシーポリシー</a>
                 <a href="./terms-of-service.html">利用規約</a>
-                <a href="https://github.com/RyotaOzawa0/eternal-audio/issues">サポート</a>
             </nav>
         </div>
     </header>
@@ -273,7 +268,7 @@
             <p>Microsoft Storeの返金ポリシーに準じます。返金をご希望の場合は、Microsoft Storeのサポートにお問い合わせください。</p>
 
             <h2>8. サポート</h2>
-            <p>技術的な問題やご質問は、GitHubのIssueページまたはMicrosoft Storeのレビュー機能をご利用ください。</p>
+            <p>技術的な問題やご質問は、Microsoft Storeのレビュー機能をご利用ください。</p>
 
             <h2>9. 規約の変更</h2>
             <p>本規約は予告なく変更される場合があります。重要な変更がある場合は、アプリ内でお知らせします。</p>
@@ -282,11 +277,7 @@
             <p>本規約は日本法に準拠し、解釈されるものとします。</p>
 
             <h2>お問い合わせ</h2>
-            <p>ご質問がある場合は、以下までお問い合わせください：</p>
-            <ul>
-                <li>GitHub: <a href="https://github.com/RyotaOzawa0/eternal-audio/issues" style="color: #6366f1;">https://github.com/RyotaOzawa0/eternal-audio/issues</a></li>
-                <li>Microsoft Store レビュー機能</li>
-            </ul>
+            <p>ご質問やサポートが必要な場合は、Microsoft Storeアプリページのレビュー機能をご利用ください。</p>
 
             <div class="footer">
                 <p>© 2025 Eternal Audio. All rights reserved.</p>
