--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,288 +1,74 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>利用規約 - Eternal Audio</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Hiragino Kaku Gothic ProN", "Yu Gothic", sans-serif;
-            background: #0a0a0a;
-            color: #e0e0e0;
-            min-height: 100vh;
-            line-height: 1.8;
-        }
-
-        .header {
-            background: rgba(0, 0, 0, 0.3);
-            backdrop-filter: blur(10px);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .header-content {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 16px 24px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .logo {
-            font-size: 24px;
-            font-weight: 600;
-            color: #ffffff;
-            text-decoration: none;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 24px;
-        }
-
-        .nav-links a {
-            color: rgba(255, 255, 255, 0.7);
-            text-decoration: none;
-            font-size: 14px;
-            transition: color 0.3s ease;
-        }
-
-        .nav-links a:hover {
-            color: #ffffff;
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 48px 24px;
-        }
-
-        .document {
-            background: #1a1a1a;
-            border-radius: 20px;
-            padding: 48px;
-            border: 1px solid #333;
-        }
-
-        h1 {
-            font-size: 32px;
-            margin-bottom: 8px;
-            color: #ffffff;
-        }
-
-        .last-updated {
-            font-size: 14px;
-            color: rgba(255, 255, 255, 0.6);
-            margin-bottom: 48px;
-        }
-
-        h2 {
-            font-size: 24px;
-            margin: 32px 0 16px 0;
-            color: #ffffff;
-            padding-bottom: 8px;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        h3 {
-            font-size: 18px;
-            margin: 24px 0 12px 0;
-            color: rgba(255, 255, 255, 0.9);
-        }
-
-        p {
-            margin: 12px 0;
-            color: rgba(255, 255, 255, 0.8);
-        }
-
-        ul {
-            margin: 12px 0;
-            padding-left: 24px;
-        }
-
-        li {
-            margin: 8px 0;
-            color: rgba(255, 255, 255, 0.8);
-        }
-
-        .warning-box {
-            background: rgba(239, 68, 68, 0.1);
-            border-left: 4px solid #ef4444;
-            padding: 16px;
-            margin: 24px 0;
-            border-radius: 8px;
-        }
-
-        .info-box {
-            background: rgba(255, 255, 255, 0.05);
-            border-left: 4px solid #666;
-            padding: 16px;
-            margin: 24px 0;
-            border-radius: 8px;
-        }
-
-        .footer {
-            margin-top: 48px;
-            padding-top: 24px;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            text-align: center;
-            font-size: 12px;
-            color: rgba(255, 255, 255, 0.4);
-        }
-
-        @media (max-width: 768px) {
-            .document {
-                padding: 32px 24px;
-            }
-
-            h1 {
-                font-size: 28px;
-            }
-
-            h2 {
-                font-size: 20px;
-            }
-
-            .nav-links {
-                display: none;
-            }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>利用規約 - Eternal Audio</title>
+  <style>
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Hiragino Kaku Gothic ProN", "Yu Gothic", "Helvetica Neue", Arial, sans-serif; margin: 0; background: #0a0a0a; color: #e6e6e6; line-height: 1.8; }
+    .wrap { max-width: 880px; margin: 0 auto; padding: 32px 20px 64px; }
+    h1 { font-size: 28px; margin: 8px 0 6px; }
+    .muted { color: #9aa0a6; font-size: 14px; margin-bottom: 28px; }
+    h2 { font-size: 20px; margin: 28px 0 8px; padding-bottom: 6px; border-bottom: 1px solid #2a2a2a; }
+    p { margin: 10px 0; }
+    ul { margin: 10px 0 10px 20px; }
+    a { color: #8ab4f8; text-decoration: none; }
+    .topnav { background: #0f0f10; border-bottom: 1px solid #1f1f20; position: sticky; top: 0; }
+    .topnav-inner { max-width: 880px; margin: 0 auto; padding: 14px 20px; display: flex; gap: 12px; align-items: baseline; }
+    .spacer { flex: 1; }
+  </style>
 </head>
 <body>
-    <header class="header">
-        <div class="header-content">
-            <a href="./" class="logo">Eternal Audio</a>
-            <nav class="nav-links">
-                <a href="./privacy-policy.html">プライバシーポリシー</a>
-                <a href="./terms-of-service.html">利用規約</a>
-            </nav>
-        </div>
-    </header>
-
-    <div class="container">
-        <div class="document">
-            <h1>Eternal Audio 利用規約</h1>
-            <p class="last-updated">最終更新日: 2025年9月24日</p>
-
-            <h2>1. はじめに</h2>
-            <p>本利用規約（以下「本規約」）は、Eternal Audio（以下「本アプリ」）の利用条件を定めるものです。本アプリをご利用いただく前に、本規約をよくお読みください。</p>
-
-            <h2>2. ライセンスの許諾</h2>
-
-            <h3>2.1 使用権</h3>
-            <ul>
-                <li>Microsoft Storeで本アプリを購入されたお客様に、本アプリを使用する非独占的かつ譲渡不可能なライセンスを付与します</li>
-                <li>ライセンスは購入したMicrosoftアカウントに紐付けられます</li>
-                <li>本アプリは同時に1台のデバイスでのみ使用可能です</li>
-            </ul>
-
-            <h3>2.2 制限事項</h3>
-            <div class="warning-box">
-                <p><strong>以下の行為を禁止します：</strong></p>
-                <ul style="margin-top: 8px;">
-                    <li>本アプリのリバースエンジニアリング、逆コンパイル、逆アセンブル</li>
-                    <li>本アプリの改変、派生物の作成</li>
-                    <li>ライセンスの転売、再配布</li>
-                    <li>商用目的での無断使用</li>
-                </ul>
-            </div>
-
-            <h2>3. 音声認識とデータ処理</h2>
-
-            <h3>3.1 ローカル処理</h3>
-            <ul>
-                <li>音声認識処理はすべてお客様のデバイス上で実行されます</li>
-                <li>インターネット接続は必須ではありません（オフライン動作可能）</li>
-            </ul>
-
-            <h3>3.2 録音データ</h3>
-            <ul>
-                <li>録音データはお客様のローカルストレージに保存されます</li>
-                <li>録音の開始・停止はお客様が完全にコントロールできます</li>
-                <li>当社は録音データにアクセスすることはありません</li>
-            </ul>
-
-            <h3>3.3 生成コンテンツ</h3>
-            <ul>
-                <li>本アプリが生成するテキストコンテンツの著作権はお客様に帰属します</li>
-                <li>ただし、生成にOpenAI APIを使用する場合は、OpenAIの利用規約も適用されます</li>
-            </ul>
-
-            <h2>4. 外部サービスとの連携</h2>
-
-            <h3>4.1 OpenAI API</h3>
-            <div class="info-box">
-                <ul>
-                    <li>テキスト生成機能を使用する場合、お客様自身のOpenAI APIキーが必要です</li>
-                    <li>APIの利用料金はお客様の負担となります</li>
-                    <li>OpenAIサービスの利用にはOpenAIの利用規約が適用されます</li>
-                </ul>
-            </div>
-
-            <h3>4.2 自動アップデート</h3>
-            <ul>
-                <li>セキュリティと機能改善のため、自動アップデート機能を提供します</li>
-                <li>アップデートの確認は当社のサーバーと通信しますが、個人情報は送信されません</li>
-            </ul>
-
-            <h2>5. プライバシー</h2>
-
-            <h3>5.1 収集する情報</h3>
-            <ul>
-                <li>匿名の利用統計（アプリバージョン、OS情報）</li>
-                <li>クラッシュレポート（個人を特定しない技術情報のみ）</li>
-            </ul>
-
-            <h3>5.2 収集しない情報</h3>
-            <ul>
-                <li>音声データ、録音内容</li>
-                <li>生成されたテキスト内容</li>
-                <li>個人を特定可能な情報</li>
-            </ul>
-
-            <h2>6. 免責事項</h2>
-
-            <h3>6.1 保証の否認</h3>
-            <p>本アプリは「現状のまま」提供され、明示的または黙示的な保証はありません。</p>
-
-            <h3>6.2 責任の制限</h3>
-            <div class="warning-box">
-                <ul>
-                    <li>本アプリの使用により生じた損害について、当社は責任を負いません</li>
-                    <li>音声認識の精度は100%ではなく、誤認識が発生する可能性があります</li>
-                    <li>重要な用途（医療、法律、金融等）での使用は推奨しません</li>
-                </ul>
-            </div>
-
-            <h2>7. 返金ポリシー</h2>
-            <p>Microsoft Storeの返金ポリシーに準じます。返金をご希望の場合は、Microsoft Storeのサポートにお問い合わせください。</p>
-
-            <h2>8. サポート</h2>
-            <p>技術的な問題やご質問は、Microsoft Storeのレビュー機能をご利用ください。</p>
-
-            <h2>9. 規約の変更</h2>
-            <p>本規約は予告なく変更される場合があります。重要な変更がある場合は、アプリ内でお知らせします。</p>
-
-            <h2>10. 準拠法</h2>
-            <p>本規約は日本法に準拠し、解釈されるものとします。</p>
-
-            <h2>お問い合わせ</h2>
-            <p>ご質問やサポートが必要な場合は、Microsoft Storeアプリページのレビュー機能をご利用ください。</p>
-
-            <div class="footer">
-                <p>© 2025 Eternal Audio. All rights reserved.</p>
-            </div>
-        </div>
+  <nav class="topnav">
+    <div class="topnav-inner">
+      <strong>Eternal Audio</strong>
+      <span class="spacer"></span>
     </div>
+  </nav>
+
+  <main class="wrap">
+    <h1>利用規約</h1>
+    <p class="muted">最終更新日：2025年10月21日</p>
+
+    <h2>1. はじめに</h2>
+    <p>
+      本規約は、Eternal Audio（以下「本アプリ」）の利用条件を定めるものです。本アプリをインストールまたは利用することで、
+      本規約に同意したものとみなされます。
+    </p>
+
+    <h2>2. 提供形態と外部通信</h2>
+    <ul>
+      <li>本アプリはデスクトップアプリとして提供され、通常動作において外部APIや当社サーバーと通信しません。</li>
+      <li>音声の取り込み・認識・加工などの処理は端末内で完結します。</li>
+      <li>ネットワーク接続は不要です（ユーザーが自ら外部へ共有しない限り、データは端末外に送信されません）。</li>
+    </ul>
+
+    <h2>3. 生成物と権利</h2>
+    <ul>
+      <li>本アプリが生成・変換したテキスト等の成果物は、ユーザーに帰属します。</li>
+      <li>第三者の権利を侵害しない形でのみご利用ください。</li>
+    </ul>
+
+    <h2>4. 禁止事項</h2>
+    <ul>
+      <li>法令または公序良俗に反する行為</li>
+      <li>第三者の権利（知的財産権・プライバシー等）を侵害する行為</li>
+      <li>不正アクセス、改ざん、悪意あるプログラムの配布等の行為</li>
+    </ul>
+
+    <h2>5. 免責</h2>
+    <ul>
+      <li>本アプリは現状有姿で提供されます。正確性・有用性・特定目的適合性等について明示または黙示の保証は行いません。</li>
+      <li>本アプリの利用に起因してユーザーに生じた損害について、当方は一切の責任を負いません。</li>
+    </ul>
+
+    <h2>6. 規約の変更</h2>
+    <p>
+      本規約の内容は、必要に応じて本ページの更新により変更されることがあります。重要な変更がある場合は本ページの最終更新日を更新します。
+    </p>
+
+    <h2>7. 連絡先</h2>
+    <p>本規約に関するお問い合わせは、アプリの配布ページに記載の連絡手段をご利用ください。</p>
+  </main>
 </body>
 </html>
